[package]
name = "axdaemon"
version = "0.1.0"
edition = "2021"
description = "Daemon process for arceos-hypervisor for VMM support."
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
log = "0.4.22"
env_logger = "0.11.3"
tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
axerrno = "0.1.0"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
axdaemon_request = { path = "../axdaemon_request" }
ctrlc = "3.4.4"
flume = "0.11.0"
futures-concurrency = "7.6.1"